# SeekArcTools

./: .gitignore  LICENSE  MANIFEST.in  README.md  csenv.yaml  detail.env.yaml  env.sh  env.yaml  seekarctools  setup.cfg
src/seekarctools/: __init__.py
src/seekarctools/arc/: __init__.py  astep2.py  astep3.py  astep4.py  estep2.py  estep3.py  report_arc.py
src/seekarctools/utils/: __init__.py  addtag.py  atacbarcode.py  barcode.py  chemistry.py  countUtil.py  count_link.R  do_seurat.R  fastUtil.py  gtfvalidator.py  helper.py  pipeline.py  plotUtil.py  splitref.py  vdjUtil.py  wrappers.py
src/seekarctools/utils/reportarc/: base.html  sgarc.json
